[PPSD-18] Small fixes on mobile responsive

--- a/themes/pukara-theme/assets/sass/main.scss
+++ b/themes/pukara-theme/assets/sass/main.scss
@@ -289,25 +289,24 @@ div.text-2-aboutus {
 .columns-aboutus .e-con-inner div.column-aboutus {
 	margin: 0 1.2vw 0 1.2vw;
 }
-/*.column-image .elementor-widget-container {
+body { padding: 0; margin: 0; }
+
+/*.column-image .elementor-widget-container { 
 	position: relative;
-	display: inline-block;
-  }
-.column-image .elementor-widget-container img {
-	width:20vw;
-	display: block;
-	height: auto;
 }
-.column-image .elementor-widget-container img::after {
-	content: '';
+.column-image .elementor-widget-container img {
+	display: block;
+	position: relative;
+	z-index: 1;
+}
+.column-image .elementor-widget-container::after {
 	position: absolute;
 	bottom: 0;
-	left: 0;
 	width: 100%;
-	height: 50%;
-	background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-	pointer-events: none;
-  }*/
+	height: 350px;
+	z-index: 2;
+	background: rgba(255, 255, 255, 0) linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 80%) repeat scroll 0 0;
+} */
 .column-2-aboutus .name-aboutus .elementor-widget-container h3.elementor-heading-title {
 	font-size: 1.3rem !important;
 	margin-top: 3.5vh;
